--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  width: 60%;
+  margin: auto;
+  background-color: black;
   display: flex;
-  flex-direction: column;
+
+
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+
+
+.search_img{
+  height: 30px;
+}
+
+.header_btn{
+  background-color: rgb(128,128,128);
+}
+
+.header_text {
   color: white;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.header_inp{
+  width: 70%;
+  height: 30px;
+  border-radius: 4px;
+  outline: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 25px;
 }
